src/test/deca/context/invalid/ContextAvecObjet/DeclMeth/overrideWrongReturn.deca
// Description:
//    Override avec un autre return
//
// Resultats:
//    Erreur contextuelle ligne 18
//    type de retour incompatible
class A{

    int x;

    void setX(int y){
        x = y;
    }
}

class B extends A{

    int setX(int y){
        return y;
    }
}
